Change text and disable empty combobox for payment request shipping address

BUG=721500

Review-Url: https://codereview.chromium.org/2888733004
Cr-Commit-Position: refs/heads/master@{#473186}

Former-commit-id: 5022bd5a5c78faa35e4236abb37dd67b86b9cf44